--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -7,7 +7,7 @@
   width:100vw;
     text-align: center;
     margin-top:6rem;
-
+color:aliceblue
   }
 
   form{
@@ -27,7 +27,7 @@
   
 
   .wallpaper{
-    background-image: url(../assets/imgs/login\ image.jpg);
+    background-image: url(../assets/imgs/240_F_333658481_YbLwzxEkc5enDxFS3IP6y4fub0LtIpkh.jpg);
     height: 100vh;
   }
 
