--- a/src/StudentCSS/student.css
+++ b/src/StudentCSS/student.css
@@ -1,173 +1,3 @@
-/* aside{
-     height:100vh;
-    background: rgb(242, 239, 244); 
-}
-
-aside .top{
-    
-    display:flex;
-    align-items:center;
-     justify-content: space-between; 
-     margin-top:1.4rem;
-    padding:1rem
-}
-
-aside .logo{
-    display:flex;
-    gap:1rem;
-    align-items: center;
-    
-
-}
-aside .logo img{
-    width:5rem;
-    height:4rem
-}
-
-
-aside .close{}
-
-
-
-aside .sidebar{
-    background: white;
-    display:flex;
-    flex-direction: column;
-    height:86vh;
-    position:relative;
-    top:3rem
-}
-
-aside .sidebar a{
-    display:flex;
-    text-decoration: none;
-    color:black;
-    margin-left: 2rem;
-    gap:0.3rem;
-    align-items: center;
-    position:relative;
-    height:6rem; 
-    transition:all 300ms ease;   
-}
-
-aside .sidebar a span{
-    font-size:3rem;
-    margin:1rem;
-    transition: all 300ms ease
-}
-
-aside .sidebar a .menu{
-    margin-top: 1rem;
-    font-weight: 700px;
-    font-size:1.8rem;
-    
-}
-
-
-aside .sidebar a:last-child{
-    position:absolute;
-    bottom:2rem;
-    width:100%
-}
-
-aside  .sidebar a.Active{
-    background:rgb(107, 107, 168) ;
-    margin-left:0rem
-}
-
-aside  .sidebar a.Active:before{
-    content:"";
-    width:6px;
-    height:100%;
-    background:blue
-}
-
-aside  .sidebar a.Active span{
-    color:rgb(95, 11, 240);
-    margin-left:calc(1rem-3px)
-}
-
-aside  .sidebar a.Active .menu{
-    color:blue
-}
-
-
-aside .sidebar a:hover{
-    color:blue
-}
-
-aside .sidebar a:hover{
-    margin-left:3rem
-}
-
- @media screen and (max-width:1200px){
-    .container-fluid{
-        width:94%;
-        grid-template-columns: 7rem auto;
-    }
-
-    aside .logo h1{
-        display:none
-    }
-
-    aside .sidebar .menu{
-        display:none
-    }
-
-    aside .sidebar a{
-        width:5.6rem
-    }
-
-    aside .sidebar a:last-child{
-        position:relative;
-        margin-top:1.8rem
-    }
-}
-
-@media screen and (max-width:768px){
-    .container{
-        width:100%;
-        grid-template-columns: 1fr
-    }
-
-    aside{
-        position:fixed;
-        left:0;
-        background:white;
-        width:18rem;
-        z-index:3;
-        box-shadow: 1rem 3rem 4rem gray;
-        height:100vh;
-        padding-right:white;
-    
-    }
-
-    aside .logo{
-        margin-left:1rem;
-    }
-
-    aside .logo h1{
-        display:inline
-    }
-
-    aside .sidebar .menu{
-        display:inline
-    }
-
-    aside .sidebar a{
-        width:100%;
-        height:3.4rem
-    }
-
-    aside .close{
-         display:inline-block;
-   
-      cursor:pointer
-    }   
-} 
- */
-
-
 
  *{
     margin:0;
@@ -177,10 +7,11 @@ aside .sidebar a:hover{
 .container-fluid{
     display:flex;
 }
-main{
-    width: 100%;
-    padding: 20px;
+.set{
+    background-image: linear-gradient(135deg, #43CBFF 10%, #9708CC 100%);;
 }
+
+
 .sidebar{
     background: #000;
     color: #fff;
