--- a/src/StudentCSS/Gridcss.css
+++ b/src/StudentCSS/Gridcss.css
@@ -1,4 +1,4 @@
-*{
+/* *{
      margin: 0;
      padding:0; 
      appearance: none;
@@ -16,4 +16,4 @@
     background: rgb(95, 11, 240);
     overflow:hidden;
     grid-template-columns: 15% auto;
-}
+} */
