--- a/src/StudentCSS/dmmy.css
+++ b/src/StudentCSS/dmmy.css
@@ -1,60 +1,6 @@
-*{
-    margin: 0;
-    padding:0; 
-    appearance: none;
-    outline:0;
-    text-decoration: none;
-    list-style: none;
-    border: 0;
-    box-sizing: border-box;}
-
-.body{
-   width:100vw;
-   height:100vh;
-   user-select:none;
-   overflow-x:hidden; 
-}
-
-.container-fluid{
- display: grid;
- width:96%;
- margin: 0 auto;
- background: rgb(156, 129, 182); 
- gap:1.8rem;
- grid-template-columns: 18rem auto 
-}
-
-aside{
-    height:100vh;
-   background: rgb(242, 239, 244); 
-}
-
-aside .top{
-   
-   display:flex;
-   align-items:center;
-    justify-content: space-between; 
-    margin-top:1.4rem;
-    background: rgb(22, 150, 116);
-   padding:1rem
-}
-
-aside .logo{
-   display:flex;
-   gap:1rem;
-   align-items: center;
-   
-
-}
-aside .logo img{
-   width:5rem;
-   height:4rem
-}
+/* 
 
 
-aside .close{}
-
-/* Sidebar */
 
 aside .sidebar{
    background: white;
@@ -73,8 +19,8 @@ aside .sidebar a{
    gap:0.3rem;
    align-items: center;
    position:relative;
-   height:6rem; /*realtive for height*/
-   transition:all 300ms ease;    /*smoothen animation and transition */
+   height:6rem;
+   transition:all 300ms ease;   
 }
 
 aside .sidebar a span{
@@ -117,7 +63,7 @@ aside  .sidebar a.Active .menu{
    color:blue
 }
 
-/*to change color on hover*/
+
 aside .sidebar a:hover{
    color:blue
 }
@@ -186,8 +132,7 @@ aside .sidebar a:hover{
    }
 
    aside .close{
-       /* display:inline-block
-  */
+
      cursor:pointer
    }   
-}
+}  */
