--- a/src/StudentCSS/student.css
+++ b/src/StudentCSS/student.css
@@ -15,7 +15,7 @@
 .sidebar{
     background: #000;
     color: #fff;
-    height: 100vh;
+    height: 1000px;
     width: 200px;
     transition: all 0.5s;
 }
@@ -51,3 +51,8 @@
 .icon, .link_text{
     font-size: 20px;
 }
+
+
+h3{text-align: center;}
+
+
